--- a/index_everything_working.html
+++ b/index_everything_working.html
@@ -3049,7 +3049,7 @@ function updatePercentage(value) {
                 // Save to localStorage
                 localStorage.setItem('stakingRewardAddresses', JSON.stringify(currentSettingsAddresses.contractAddresses));
                 updateStakingStats();
-                updateStakingValues(['1.0120213', '15.000'], '8.75');
+               // updateStakingValues(['1.0120213', '15.000'], '8.75');
             } catch (error) {
                 alert('Invalid JSON format. Please check your address format.');
             }
